this is my workshop ASSIGNMENT folder

--- a/Assignment/CSSLEARNING/Assignment 3.html
+++ b/Assignment/CSSLEARNING/Assignment 3.html
@@ -25,26 +25,45 @@
             <ul>
                 <li>
                     apple
-                    <li>
+                <li>
                     ball
-                    <li>
+                <li>
             cat
             </li>
-                    <li>doll</li> 
+            <li>doll</li> 
             </ul>
             <hr>
             <ol>
                 <li>
                     apple
-                    <li>
+                <li>
                     ball
                 </li>
-                    <li>
-            cat
-            </li>
-                    <li>doll</li> 
-            </ul>
+                <li>
+                 cat
+                </li>
+            <li>doll</li> 
+            </ol>
             <hr>
+            <h2>video</h2>
+            <video src="kuchvi.mp4" height="100px" width="200px" autoplay muted loop></video>
+<hr>
+<h2>image</h2>
+<img src="a.png" height="100px" width="200px">
+<hr>
+            <h2>
+                marquee
+            </h2>
+                   <marquee behavior="alternate" direction="right">let's go to home
+                    </marquee><hr>
+                    <h2>
+                       link
+                    </h2>
+                    <span>
+                        Read more at: </span>
+                   <span><a href="https://www.geeksforgeeks.org/html-introduction">HTML Basics</a></span>
+                   <br>
+
 
 
         </body>
